--- a/index.html
+++ b/index.html
@@ -135,22 +135,43 @@
     <main class="flex-grow max-w-7xl mx-auto w-full px-4 sm:px-6 lg:px-8 py-8">
         
         <!-- Global Input Context Bar -->
-        <div class="bg-white p-4 rounded-xl shadow-sm border border-brand-200 mb-8 flex flex-col md:flex-row gap-4 items-center justify-between animate-fade-in">
-            <div class="flex items-center gap-2 text-brand-700">
-                <i class="fa-solid fa-wand-magic-sparkles"></i>
-                <span class="font-semibold text-sm">מחולל פקודות אוטומטי:</span>
-                <span class="text-xs text-ui-gray hidden md:inline">הזן פרטים כדי לעדכן את כל הקוד במדריך</span>
+<div class="bg-white p-4 rounded-xl shadow-sm border border-brand-200 mb-8 flex flex-col md:flex-row gap-4 items-center justify-between animate-fade-in">
+    <div class="flex items-center gap-2 text-brand-700">
+        <i class="fa-solid fa-wand-magic-sparkles"></i>
+        <span class="font-semibold text-sm">מחולל פקודות אוטומטי:</span>
+        <span class="text-xs text-ui-gray hidden md:inline">הזן פרטים כדי לעדכן את כל הקוד במדריך</span>
+    </div>
+    <div class="flex flex-col md:flex-row gap-4 w-full md:w-auto">
+        <div class="relative group">
+            <div class="absolute inset-y-0 right-0 flex items-center pr-3 pointer-events-none text-brand-400">
+                <i class="fa-regular fa-envelope"></i>
             </div>
-            <div class="flex flex-col md:flex-row gap-4 w-full md:w-auto">
-                <div class="relative group">
-                    <div class="absolute inset-y-0 right-0 flex items-center pr-3 pointer-events-none text-brand-400">
-                        <i class="fa-regular fa-envelope"></i>
-                    </div>
-                    <input type="text" id="globalRoomEmail" placeholder="כתובת מייל החדר (לדוג: room@domain.com)" 
-                           class="block w-full md:w-80 pr-10 pl-3 py-2 border border-brand-200 rounded-lg leading-5 bg-brand-50 placeholder-brand-300 focus:outline-none focus:ring-2 focus:ring-brand-500 focus:border-brand-500 sm:text-sm transition-all"
-                           oninput="updateGlobalContext()">
-                </div>
-                <div class="relative group">
+            <input type="text" id="globalRoomEmail" placeholder="כתובת מייל החדר (לדוג: room@domain.com)" 
+                   class="block w-full md:w-80 pr-10 pl-3 py-2 border border-brand-200 rounded-lg leading-5 bg-brand-50 placeholder-brand-300 focus:outline-none focus:ring-2 focus:ring-brand-500 focus:border-brand-500 sm:text-sm transition-all"
+                   oninput="updateGlobalContext()">
+        </div>
+        <div class="relative group">
+            <div class="absolute inset-y-0 right-0 flex items-center pr-3 pointer-events-none text-brand-400">
+                <i class="fa-solid fa-list-ul"></i>
+            </div>
+            <input type="text" id="globalListName" placeholder="שם רשימת חדרים (לדוג: IL-Rooms)" 
+                   class="block w-full md:w-64 pr-10 pl-3 py-2 border border-brand-200 rounded-lg leading-5 bg-brand-50 placeholder-brand-300 focus:outline-none focus:ring-2 focus:ring-brand-500 focus:border-brand-500 sm:text-sm transition-all"
+                   oninput="updateGlobalContext()">
+        </div>
+    </div>
+</div>
+
+<div class="bg-brand-100 border border-brand-200 rounded-xl p-4 mb-8 flex items-center justify-between shadow-sm">
+    <div class="flex items-center gap-3 text-brand-900">
+        <i class="fa-solid fa-book-open text-brand-600"></i>
+        <p class="text-sm font-medium">למידע טכני נוסף והנחיות מורחבות, עיין במדריך ה-README המלא בגיטהאב.</p>
+    </div>
+    <a href="https://github.com/yahellaor/RoomPanel/blob/main/README.md" target="_blank" 
+       class="bg-brand-600 hover:bg-brand-700 text-white px-4 py-2 rounded-lg text-sm font-bold transition-all flex items-center gap-2">
+        <i class="fa-brands fa-github"></i>
+        למדריך ה-README המלא
+    </a>
+</div>                <div class="relative group">
                     <div class="absolute inset-y-0 right-0 flex items-center pr-3 pointer-events-none text-brand-400">
                         <i class="fa-solid fa-list-ul"></i>
                     </div>
