--- a/index.html
+++ b/index.html
@@ -311,7 +311,8 @@ strong{color:var(--text)}
     <div class="sb-label">כלים</div>
     <a class="nav-item" href="#qref" onclick="closeSB()"><span class="nav-num">📋</span>סיכום פקודות</a>
   </nav>
-  <div class="sb-foot">ExchangeOnlineManagement v3.9.2</div>
+  <div class="sb-foot">Microsoft 365, PowerShell ו-Exchange Online הם סימנים מסחריים של Microsoft.</div>
+  <div class="sb-foot">© 2026 Yahel Laor</div>
 </aside>
 
 <main class="main">
@@ -337,8 +338,8 @@ strong{color:var(--text)}
       <div><div class="sec-title">דרישות רישוי ומידע מקדים</div><div class="sec-desc">מה נדרש לפני שמתחילים</div></div>
     </div>
     <div class="cards">
-      <div class="card"><div class="card-icon" style="background:rgba(14,165,233,.12)">🪪</div><div><div class="card-title">רישיון SHARED</div><div class="card-text">כל מכשיר פיזי דורש <strong>Shared Device</strong> — ללא O365 נפרד.</div></div></div>
-      <div class="card"><div class="card-icon" style="background:rgba(34,197,94,.1)">✅</div><div><div class="card-title">ללא O365</div><div class="card-text">לא נדרש רישוי Office 365 עבור חדרי ישיבות.</div></div></div>
+      <div class="card"><div class="card-icon" style="background:rgba(14,165,233,.12)">🪪</div><div><div class="card-title">רישיון SHARED</div><div class="card-text">כל מכשיר פיזי דורש <strong>Shared Device</strong> — ללא Office365 נפרד.</div></div></div>
+      <div class="card"><div class="card-icon" style="background:rgba(34,197,94,.1)">✅</div><div><div class="card-title">ללא Office365</div><div class="card-text">לא נדרש רישוי Office 365 עבור חדרי ישיבות.</div></div></div>
       <div class="card"><div class="card-icon" style="background:rgba(245,158,11,.1)">📦</div><div><div class="card-title">מקור המודול</div><div class="card-text"><a href="https://www.powershellgallery.com/packages/ExchangeOnlineManagement/3.9.2" target="_blank">PowerShell Gallery v3.9.2</a></div></div></div>
     </div>
   </section>
