--- a/index.html
+++ b/index.html
@@ -799,7 +799,7 @@ RemovePrivateProperty     : False</span></pre></div>
 <span class="fn">Set-CalendarProcessing</span> <span class="pm">-Identity</span> <span class="str">NewRoom@domain.com</span> <span class="pm">-DeleteSubject</span> <span class="bl">$False</span> <span class="pm">-AddOrganizerToSubject</span> <span class="bl">$False</span> <span class="pm">-RemovePrivateProperty</span> <span class="bl">$False</span> <span class="pm">-OrganizerInfo</span> <span class="bl">$False</span> <span class="pm">-DeleteComments</span> <span class="bl">$False</span>
 </pre>
           </div>
-          <div class="email-note">⚠️ <strong>שים לב:</strong> יש להחליף את <code>NewRoom@domain.com</code> בכתובת המייל של החדר שלך כפי שהוגדרה בפורטל הניהול.</div>
+                    <div class="email-note">❗ <strong>שים לב:</strong> יש להחליף את <code>המשתנים (מסומנים בירוק)</code> בפרטיך הרלוונטים.</div>
         </div>
       </div>
     </div>
